--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.2.14
   file_picker: ^6.1.1
+  http: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
