--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   file_picker: ^6.1.1
   http: ^1.2.0
   intl: ^0.17.0
+  web: ^0.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
